--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
         <button type="submit">Linkedin</button>
         <button type="submit">Twitter</button>
         <button type="submit">Instagram</button>
+        <p class="bottom_text">
+          Challenge by <a href="https://www.frontendmentor.io/" target="_blank">Frontend Mentor</a>. Coded by <a href="https://wa.me/50941319660" target="_blank">CRJ</a>.
+        </p>
       </div>
       
     </div>
