--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       </div>
 
       <div class="coord">
-        <span id="name">Jessica Randall</span>
-        <p id="location_text">
+        <span class="name">Jessica Randall</span>
+        <p class="location_text">
           London, United Kingdom
         </p>
         <p>"Front-end devlopper and avid reader"</p>
