--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
     <link rel="stylesheet" href="style.css">
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <div class="profile">
+    <main class="profile">
 
       <div class="pic_profile">
         <img src="assets/images/avatar-jessica.jpeg" alt="Profile picture">
@@ -36,6 +36,6 @@
         </p>
       </div>
       
-    </div>
+    </main>
   </body>
 </html>
