--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html >
+<html  lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,7 +18,7 @@
       </div>
 
       <div class="coord">
-        <span class="name">Jessica Randall</span>
+        <h1 class="name">Jessica Randall</h1>
         <p class="location_text">
           London, United Kingdom
         </p>
